[gd_scene load_steps=19 format=2]

[ext_resource path="res://textures/enemy_c2.png" type="Texture" id=1]
[ext_resource path="res://textures/enemy_c1.png" type="Texture" id=2]
[ext_resource path="res://scripts/EnemyCSprites.gd" type="Script" id=3]
[ext_resource path="res://scenes/Nani.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/laser2.png" type="Texture" id=5]
[ext_resource path="res://textures/laser1.png" type="Texture" id=6]
[ext_resource path="res://scripts/Lasers.gd" type="Script" id=7]
[ext_resource path="res://sounds/alert.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=9]

[sub_resource type="GDScript" id=3]
script/source = "extends Area2D

export var ps_nani: PackedScene
export var speed: float = 125.0


const lag = 1.0
var lagt = 0

var player: Node2D
var angle = 0.0
var mask_stack = 0
var fl_p_hidden = true
var timer = 0
var first_sound = true
var tst = 0.1

func _ready():
	$Sprites/Lasers.activate(false)

func _process(delta):
	if tst >= 0.0:
		tst -=delta
		return
	
	if not player.is_hidden() or is_in_mask(): # and not is_in_mask():
		angle += 0.2 * delta
		$Sprites.rotation = angle
		lagt -= delta
	else:
		lagt = lag
		first_sound = true
	
	if lagt < 0:
		$Sprites/Lasers.activate(true)
		if first_sound:
			$Laser.play()
			first_sound = false
			
	if fl_p_hidden and (not player.is_hidden() or is_in_mask()):
		fl_p_hidden = false
		spawn_nani()
	elif not fl_p_hidden and not (not player.is_hidden() or is_in_mask()):
		fl_p_hidden = true
		$Sprites/Lasers.activate(false)
		
	update()
	timer += delta

func _draw():
	draw_line(
		Vector2(-800 * cos(angle + PI/2 + PI/4), -800 * sin(angle + PI/2 + PI/4)), 
		Vector2(800 * cos(angle + PI/2 + PI/4), 800 * sin(angle + PI/2 + PI/4)), 
		Color(1.0, 0.0, 0.0, 0.4), 
		2.0
	)
	
	draw_line(
		Vector2(-800 * cos(angle + PI/4), -800 * sin(angle + PI/4)), 
		Vector2(800 * cos(angle + PI/4), 800 * sin(angle + PI/4)), 
		Color(1.0, 0.0, 0.0, 0.4), 
		2.0
	)
	
	
func _on_Enemy_area_entered(area: Area2D):
	if area.is_in_group(\"player\"):
		pass
	elif area.is_in_group(\"mask\"):
		mask_stack += 1


func _on_Enemy_area_exited(area):
	if area.is_in_group(\"player\"):
		pass
	elif area.is_in_group(\"mask\"):
		mask_stack -= 1
		

func is_in_mask():
	return mask_stack > 0


func spawn_nani():
	var instance = ps_nani.instance()
	instance.position = Vector2(0, -32)
	add_child(instance)
	$Nani.play()
	
	
func kill():
	set_process(false)
	hide()

"

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 800 )

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1
light_mode = 1

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2, 800 )

[node name="Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = SubResource( 3 )
ps_nani = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sprites" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sprites"]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )

[node name="Lasers" type="Node2D" parent="Sprites"]
script = ExtResource( 7 )

[node name="Laser2" type="Area2D" parent="Sprites/Lasers" groups=["enemy"]]
rotation = -0.785398
scale = Vector2( 1e-05, 1 )
collision_layer = 0
collision_mask = 0

[node name="Sprite1" type="Sprite" parent="Sprites/Lasers/Laser2"]
material = SubResource( 5 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 1600 )

[node name="Sprite2" type="Sprite" parent="Sprites/Lasers/Laser2"]
material = SubResource( 6 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 1600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/Lasers/Laser2"]
shape = SubResource( 9 )

[node name="Laser1" type="Area2D" parent="Sprites/Lasers" groups=["enemy"]]
rotation = 0.785398
scale = Vector2( 1e-05, 1 )
collision_layer = 0
collision_mask = 0

[node name="Sprite1" type="Sprite" parent="Sprites/Lasers/Laser1"]
material = SubResource( 7 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 1600 )

[node name="Sprite2" type="Sprite" parent="Sprites/Lasers/Laser1"]
material = SubResource( 8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 1600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/Lasers/Laser1"]
shape = SubResource( 10 )

[node name="Nani" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -0.874
pitch_scale = 1.17

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
